--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                                 </div>
                             </div>
                             
-                            <div class="flex items-start">
+            <!-- Contact   <div class="flex items-start">
                                 <div class="bg-blue-100 p-3 rounded-full mr-4">
                                     <i class="fas fa-globe text-blue-600"></i>
                                 </div>
@@ -492,6 +492,7 @@
                                     <a href="https://codex-tech.vercel.app" target="_blank" class="text-blue-600 hover:underline">codex-tech.vercel.app</a>
                                 </div>
                             </div>
+                            -->
                         </div>
                     </div>
                 </div>
